--- a/tiger/assets/css/corporate-style.css
+++ b/tiger/assets/css/corporate-style.css
@@ -14852,6 +14852,71 @@ padding-right: 0  !important;
 
 
 
+
+.uou-block-canvas.uou-block-2a.secondary .add-element-block {
+  border-right: 1px solid #808080;
+}
+.uou-block-canvas.uou-block-2a.secondary .save-preview-button {
+  float: right;
+  padding-top: 17px;
+}
+.uou-block-canvas.uou-block-2a.secondary .save-preview-button button {
+  margin-left: 6px;
+}
+.uou-block-canvas.uou-block-2a.secondary .save-preview-button button.btn {
+  border-radius: 20px;
+}
+.modal {
+  background: rgba(51, 51, 51, 0.5);
+}
+.modal .modal-dialog {
+  margin-top: 64px;
+  border-radius: 0;
+  overflow: auto;
+}
+.modal .modal-content {
+  border-radius: 0;
+  border: 0;
+}
+.modal .modal-content .uou-block-3b {
+  padding: 4px 24px;
+}
+@media (min-width: 768px) {
+  .modal-dialog {
+    width: 1170px;
+  }
+}
+.modal-block-tabs {
+  position: relative;
+}
+.modal-block-tabs .tabs {
+  text-align: center;
+  padding: 10px 0;
+  background: #f4f4f4;
+}
+.modal-block-tabs .tabs li {
+  float: none;
+  display: inline-block;
+}
+.modal-block-tabs .tabs li a {
+  font-size: 14px;
+  font-weight: 300;
+  border-radius: 20px;
+  padding: 6px 24px;
+}
+.modal-block-tabs .tabs li.active a {
+  background-color: #0099fe;
+}
+.modal-block-tabs .uou-tabs .content {
+  border-top: 0;
+  max-height: 300px;
+  overflow: auto;
+}
+.modal-block-tabs .uou-tabs .content > div {
+  background-color: #ffffff;
+}
+
+
 .contact-us-content .address-single br {
   display: none;
 }
@@ -14996,5 +15061,23 @@ padding-right: 0  !important;
 
 
 
+.stars {
+  position: relative;
 
+}
+
+.stars span {
+  /* position: absolute; */
+
+}
+
+
+
+.uou-block-1a .search-form input[type="submit"] {
+  display: none;
+}
+
+.uou-block-1a .search-form input[type="text"] {
+  color: #333;
+}
 
