--- a/tiger/assets/css/user-public-profile.css
+++ b/tiger/assets/css/user-public-profile.css
@@ -1566,7 +1566,9 @@ iframe {
 }
 
 
-
+.banr-head input[type="email"], .banr-head input[type="text"], .banr-head input[type="password"] {
+ 	color: #fff;
+}
 
 
 
