search bar fixed

--- a/tiger/assets/css/advanced-search-form.css
+++ b/tiger/assets/css/advanced-search-form.css
@@ -2,7 +2,7 @@
 #header .header-search-bar {
   position: relative;
   display: block;
-  padding: 15px 0 20px;
+  padding: 15px 15px 15px;
   margin-bottom: 20px;
   top: -5px;
   background: #fff;
