--- a/tiger/assets/css/advanced-search-form.css
+++ b/tiger/assets/css/advanced-search-form.css
@@ -69,6 +69,10 @@
   width: 50%;
 }
 
+#header .header-search-bar select {
+  margin-bottom: 0;
+}
+
 #header .header-search-bar .hsb-container .hsb-select {
   padding-left: 15px;
 }
@@ -169,7 +173,8 @@
   _-webkit-box-shadow: 0 2px 2px 0px rgba(0,0,0,.25), inset 0 5px 5px -5px rgba(0,0,0,.1);
   _box-shadow: 0 2px 2px 0px rgba(0,0,0,.25), inset 0 5px 5px -5px rgba(0,0,0,.1);
 }
-#header .header-search-bar .advanced-form  input {
+#header .header-search-bar .advanced-form  input,
+#header .header-search-bar .advanced-form  select {
   margin: 0;
 }
 #header .header-search-bar .advanced-form .container > div {
