--- a/tiger/assets/css/user-public-profile.css
+++ b/tiger/assets/css/user-public-profile.css
@@ -1416,6 +1416,31 @@ iframe {
 	color:#fff;
 }
 
+.avatar .media-body h6 {
+	margin: 0;
+}
+
+.sponsors {
+	position: relative;
+	padding: 90px 0;
+}
+
+.sponsors .overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0,0,0, .8);
+}
+
+.sponsors .section-title {
+	margin: 0;
+	color: #fff;
+	text-align: center;
+	padding-bottom: 30px;
+}
+
 .app-images img {
 	position: relative;
 	top: 50px;
@@ -1457,6 +1482,11 @@ iframe {
 .clients-says .testi {
 	position: relative;
 	padding: 20px 120px;
+}
+@media (max-width: 768px) {
+	.clients-says .testi {
+		padding: 20px 0px;
+	}
 }
 
 .clients-says .testi .text-in {
