--- a/tiger/assets/css/user-public-profile.css
+++ b/tiger/assets/css/user-public-profile.css
@@ -1194,8 +1194,10 @@ iframe {
 }
 /* HOME PRO */
 .banr-head {
-	background: url(../images/main-bg.jpg) repeat;
 	padding: 80px 0;
+	background-repeat: no-repeat !important;
+	background-position: center center !important;
+	background-size: cover !important;
 }
 .banr-head .text-area {
 	position: relative;
