--- a/tiger/assets/css/user-public-profile.css
+++ b/tiger/assets/css/user-public-profile.css
@@ -480,7 +480,7 @@ iframe {
 	margin-right: 30px;
 	overflow: hidden;
 }
-.compny-profile .profile-serv .icon img {
+.compny-profile .profile-serv .icon img.custom-img {
 	min-width: 200px;
 }
 .compny-profile .profile-serv .media-left {
