--- a/tiger/assets/css/user-public-profile.css
+++ b/tiger/assets/css/user-public-profile.css
@@ -1132,6 +1132,17 @@ iframe {
 	display: table-cell;
 	vertical-align: top;
 }
+
+@media (max-width: 767px) {
+	.media-body, .media-left {
+		display: block !important;
+		width: 100% !important;
+		margin-top: 30px;
+	}
+	.user-profile .img-profile {
+		width: 100% !important;
+	}
+}
 .media, .media-body {
 	overflow: hidden;
 	zoom: 1;
