--- a/tiger/assets/css/user-public-profile.css
+++ b/tiger/assets/css/user-public-profile.css
@@ -280,6 +280,28 @@
 	min-height: 250px;
 	padding-top: 65px;
 }
+
+@media (max-width: 767px) {
+	.user-profile-bnr {
+		padding-bottom: 100px;
+	}
+	.right-top-bnr .bt-ns {
+		margin-top: 10px !important;
+		display: block;
+		float: none !important;
+	}
+}
+@media (max-width: 520px) {
+	.right-top-bnr {
+		width: 100%;
+		float: none !important;
+	}
+	.user-profile-bnr .pull-left {
+		width: 100%;
+		display: block;
+		float: none !important;
+	}
+}
 .user-profile-bnr h2 {
 	color: #fff;
 	font-size: 36px;
