--- a/tiger/assets/css/main-style.css
+++ b/tiger/assets/css/main-style.css
@@ -14434,6 +14434,23 @@ a:hover, a:focus, a:active, a.active {
 	margin: 0;
 	list-style-type: none;
 }
+@media (max-width: 520px) {
+	.profile-company-content .nav-tabs  {
+		position: relative;
+		top: 0;
+		margin-bottom: 20px;
+		display: inline-block;
+	}
+	.profile-company-content .nav-tabs li {
+		margin-right: 0px;
+		width: 49%;
+	}
+	.profile-company-content .nav-tabs li a {
+		display: block !important;
+		border-radius: 0 !important;
+		margin-bottom: 10px !important;
+	}
+}
 .profile-company-content .nav-tabs li {
 	margin-right: 3px;
 	display: inline-block;
