--- a/tiger/assets/css/main-style.css
+++ b/tiger/assets/css/main-style.css
@@ -17945,3 +17945,32 @@ input[type="checkbox"] .styled:checked + label::after, input[type="radio"] .styl
 	background-image: -o-linear-gradient(45deg, rgba(255,255,255,.15) 25%, transparent 25%, transparent 50%, rgba(255,255,255,.15) 50%, rgba(255,255,255,.15) 75%, transparent 75%, transparent);
 	background-image: linear-gradient(45deg, rgba(255,255,255,.15) 25%, transparent 25%, transparent 50%, rgba(255,255,255,.15) 50%, rgba(255,255,255,.15) 75%, transparent 75%, transparent)
 }
+
+
+.profile-job-list {
+	border-bottom: 1px solid #f4f4f4;
+}
+
+.profile-job-list .row ,
+#jobs .sidebar .similar .row {
+	display: flex;
+	align-items: center;
+	width: 100%;
+}
+.profile-job-list h1,
+#jobs .sidebar .similar h5 {
+	margin: 0 !important;
+	font-weight: normal;
+	font-size: 17px !important;
+}
+
+#jobs .sidebar .similar h5 a {
+	color: #333;
+}
+#jobs .sidebar .similar h5 a:hover {
+	color: #0099fe;
+}
+
+#jobs .sidebar .similar h1{
+
+}
