--- a/tiger/assets/css/search-form.css
+++ b/tiger/assets/css/search-form.css
@@ -228,7 +228,7 @@ div.left {
     background-image: none;
     border: 0;
     white-space: nowrap;
-    color: #ffffff !important;
+    color: #ffffff;
     padding: 6px 21.312px;
     transition: all 0.3s;
     border-radius: 3px;
@@ -266,4 +266,41 @@ div.left {
 .btn-custom-search.active {
    background-color: #2771aa;
   border-color: #2771aa;
+}
+
+
+/* home page search style */
+.home-search-content {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background: rgba(0,0,0, .80);
+  display: inline-block;
+  padding: 20px 0;
+}
+
+.home-search-content #header .header-search-bar {
+  margin-bottom: 0;
+  padding: 0;
+  background: transparent;
+  top: 0;
+}
+
+.home-search-content #header .header-search-bar input,
+.home-search-content #header .header-search-bar button {
+  height: 40px;
+  border: 0;
+  border-radius: 30px;
+  padding-left: 20px;
+}
+
+.home-search-content #header .header-search-bar button {
+
+
+}
+
+.home-search-content #header .header-search-bar input[type="text"] {
+  background: #424242;
+  color: #999;
 }
