--- a/tiger/assets/css/advanced-search-form.css
+++ b/tiger/assets/css/advanced-search-form.css
@@ -602,11 +602,14 @@
   }
 
   #header .header-search-bar .hsb-input-1 {
-    width: 70%;
+    width: 100%;
+    margin-bottom: 15px;
   }
 
   #header .header-search-bar .hsb-container {
-    display: none;
+    width: 100%;
+    margin-bottom: 15px;
+
   }
 
   #header .header-search-bar .hsb-submit {
@@ -710,12 +713,15 @@
   }
 
   #header .header-search-bar .hsb-input-1 {
-    width: 60%;
+    width: 100%;
+    margin-bottom: 15px;
   }
 
   #header .header-search-bar .hsb-text-1,
   #header .header-search-bar .hsb-container {
-    display: none;
+    width: 100%;
+    margin-bottom: 15px;
+
   }
 
   #header .header-search-bar .hsb-submit {
@@ -973,7 +979,7 @@
 @media (max-width: 480px) {
 
   #header .header-search-bar .hsb-input-1 {
-    width: 50%;
+    width: 100%;
   }
 
   #header .header-search-bar .hsb-submit {
