--- a/tiger/assets/css/corporate-style.css
+++ b/tiger/assets/css/corporate-style.css
@@ -15282,3 +15282,11 @@ padding-right: 0  !important;
   background: transparent !important;
   list-style: none;
 }
+
+
+
+
+.uou-sidebar ul {
+  list-style: none;
+  padding-left: 10px;
+}
